--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="fonts/stylesheet.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive.css" />
@@ -191,7 +191,7 @@
                         <p>Boasting a robust core and formidable computing capabilities, our system not only drives the
                             dynamic digital display but also powers the advanced AI functionality and beyond, ensuring
                             seamless performance across all features.</p>
-                        <img src="img/qaulcomm.jpg" data-aos-duration="1500" data-aos="zoom-in"/>
+                        <img src="img/qaulcomm.jpg" data-aos-duration="1500" data-aos="zoom-in" />
                     </div>
                 </div>
             </div>
@@ -222,7 +222,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 order-2 order-lg-1">
-                    <img class="find-img desktop-img" src="img/find.jpeg" alt="find" data-aos="fade-right" data-aos-duration="2000" />
+                    <img class="find-img desktop-img" src="img/find.jpeg" alt="find" data-aos="fade-right"
+                        data-aos-duration="2000" />
                 </div>
                 <div class="col-lg-4 order-1 order-lg-2">
                     <div class="content-txt" data-aos="fade-left" data-aos-duration="2000">
@@ -238,7 +239,7 @@
         </div>
         <img class="find-img mob-img" src="img/find.jpeg" alt="find" data-aos="fade-right" data-aos-duration="2000" />
     </section>
-    <section class="technology-sec experience-sec" data-aos="fade" data-aos-duration="2000" >
+    <section class="technology-sec experience-sec" data-aos="fade" data-aos-duration="2000">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
@@ -288,7 +289,8 @@
                     </div>
                 </div>
                 <div class="col-lg-3">
-                    <div class="everyone-box even-box" data-aos="fade-up" data-aos-duration="3000" data-aos-delay="1500">
+                    <div class="everyone-box even-box" data-aos="fade-up" data-aos-duration="3000"
+                        data-aos-delay="1500">
                         <h3>All Ages</h3>
                         <div class="everyone-txt">
                             <p>A vast library of big works for the highly developed pianists</p>
@@ -418,12 +420,30 @@
             </div>
         </div>
     </footer>
+
+    <div id="overlay" class="overlay"></div>
+
+    <div class="popup" id="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup()">&times;</span>
+            <h2>ATTENTION!</h2>
+            <p>Australia Piano World is the sole dealer for FIND smart pianos and courses in Australia.
+                Unauthorized purchases mean no after-sale services, locked accounts, and inaccessible courses.
+                Safeguard your rights—buy from the authorized source, Australia Piano World.
+                Contact us for details. Thanks.</p>
+                <button class="btn btn-2 hover-slide-right" onclick="GotItPopup()">
+                    <span>Got it</span>
+                  </button>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
     <script>
         AOS.init();
 
@@ -468,6 +488,40 @@
             });
 
         });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            if (Cookies.get('popupDismissed') !== "true") {
+                showOverlay();
+                showPopup();
+            }
+        });
+
+        function showOverlay() {
+            var overlay = document.getElementById("overlay");
+            overlay.style.display = "block";
+        }
+
+        function showPopup() {
+            var popup = document.getElementById("popup");
+            popup.style.display = "block";
+        }
+
+        function closePopup() {
+            var overlay = document.getElementById("overlay");
+            var popup = document.getElementById("popup");
+
+            overlay.style.display = "none";
+            popup.style.display = "none";
+        }
+
+        function GotItPopup() {
+            var overlay = document.getElementById("overlay");
+            var popup = document.getElementById("popup");
+
+            overlay.style.display = "none";
+            popup.style.display = "none";
+            Cookies.set('popupDismissed', 'true', { expires: 7, path: '' });
+        }
     </script>
 </body>
 
